--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DouleSites</title>
+    <title>DouleSoft</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
-    <h1>Titan</h1>
-    <div id="chat-window">
-  <div id="messages"></div>
-  <form id="message-form">
-    <input type="text" id="message-input" placeholder="Enter message...">
-    <button type="submit">Send</button>
-  </form>
-</div>
+    <link rel="" href="photo_2022-11-29_09-08-41.jpg" type="">
+    <h1 class="test1">С наступающим ЧИБУПЕНЬКА!!!</h1>
+    <p class="fig"><img src="https://www.meme-arsenal.com/memes/3c739511735748badaa579b29706dbc4.jpg" alt=""></p>
+    <p class="fig1"><a href="https://t.me/doulesoft"><img src="telegram.png" alt=""></a></p>
 </body>
 </html>
   
