--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <link rel="" href="photo_2022-11-29_09-08-41.jpg" type="">
-    <h1 class="test1">С наступающим ЧИБУПЕНЬКА!!!</h1>
-    <p class="fig"><img src="https://www.meme-arsenal.com/memes/3c739511735748badaa579b29706dbc4.jpg" alt=""></p>
-    <p class="fig1"><a href="https://t.me/doulesoft"><img src="telegram.png" alt=""></a></p>
+    <div class="test2"></div>
+<div>
+    <h1 class="test1">Наше портфолио</h1>
+</div>
+<div class="test3">
+ 
+</div>
+
+
+
 </body>
 </html>
