--- a/index.html
+++ b/index.html
@@ -17,28 +17,12 @@
 </script>
 </head>
 <body class="image">
-    <br>
-    <br>
-    <br>
-    <br><a href="https://t.me/+xxHn2-WVsyI0Mzky"><div class="www"></div></a>
-    <br>
-    <br>
-    
-    <br>
-    <br>
+<a href="https://t.me/+xxHn2-WVsyI0Mzky"><img src="https://github.com/Doule-soft/Doule-soft.github.io/blob/main/photo_2022-11-29_09-08-41.jpg?raw=true" alt="" class="www"></a>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
- <a href="http://qiwi.com/n/NATIT"><img src="https://github.com/Doule-soft/Doule-soft.github.io/blob/main/pngwing.com.png?raw=true" alt="" class="wee"></a>
+ <h1 class="test1"><a href="https://t.me/+xxHn2-WVsyI0Mzky" class="test1">DouleSoft</a></h1>
+ <hr>
     <a href="https://t.me/+xxHn2-WVsyI0Mzky"><img src="https://github.com/Doule-soft/Doule-soft.github.io/blob/main/telegram.png?raw=true" alt="" class="wee"></a>
-    
+   <a href="http://qiwi.com/n/NATIT"><img src="https://github.com/Doule-soft/Doule-soft.github.io/blob/main/pngwing.com.png?raw=true" alt="" class="wee"></a> 
 
    
 
