--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <script src="https://vk.com/js/api/openapi.js?169" type="text/javascript"></script>
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
+    <script type="text/javascript">
+        VK.init({apiId: 51551666, onlyWidgets: true});
+      </script>
+      <div id="vk_comments"></div>
+      <script type="text/javascript">
+      VK.Widgets.Comments("vk_comments", {limit: 10, width: "100", attach: "*"});
+      </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +33,27 @@
     <a href="https://t.me/+xxHn2-WVsyI0Mzky"><img src="https://github.com/Doule-soft/Doule-soft.github.io/blob/main/telegram.png?raw=true" alt="" class="wee"></a>
    <a href="http://qiwi.com/n/NATIT"><img src="https://github.com/Doule-soft/Doule-soft.github.io/blob/main/pngwing.com.png?raw=true" alt="" class="wee"></a> 
 
-   
+       <script type="text/javascript">
+        VK.init({
+          apiId: 51551666,
+          onlyWidgets: true
+        });
+      </script>
+    <div id="vk_comments"></div>
+    <script type="text/javascript">
+    window.onload = function () {
+     VK.init({apiId: 111, onlyWidgets: true});
+     VK.Widgets.Comments('vk_comments', {width: 500, limit: 15}, 321);
+    }
+    <div id="vk_comments"></div>
+<script type="text/javascript">
+VK.Widgets.Comments("vk_comments", {limit: 10, width: "100", attach: "*"});
+</script>
+    </script>
+    <div id="vk_comments"></div>
+    <script type="text/javascript">
+    VK.Widgets.Comments("vk_comments", {limit: 10, width: "100", attach: "*"});
+    </script>
 
 
 
